docs: update README with project description, features and usage instructions