@@ -7,15 +7,16 @@ public class TaskRepositoryFactory {
 
     public static TaskRepository getRepository(String storageType) {
 
-        if(storageType == null || storageType.isBlank()) {
+        if (storageType == null || storageType.trim().isEmpty()) {
             throw new IllegalArgumentException("Storage type is blank or null");
         }
 
-        return switch (storageType) {
-            case "json", "file" -> new JsonTaskRepository();
-            default -> throw new IllegalArgumentException("Storage type is not valid");
-        };
-
+        switch (storageType) {
+            case "json":
+            case "file":
+                return new JsonTaskRepository();
+            default:
+                throw new IllegalArgumentException("Storage type is not valid: " + storageType);
+        }
     } 
-
 }
